# DWEngine

./: CMakeLists.txt  README.md  vcpkg.json
DWEngine/: GameConfig.cpp  GameConfig.hpp  main.cpp
DWEngine/assets/: Asset.hpp  AssetManager.cpp  AssetManager.hpp
DWEngine/assets/types/: FontAsset.cpp  FontAsset.hpp  ImageAsset.cpp  ImageAsset.hpp  MusicAsset.cpp  MusicAsset.hpp  ScriptAsset.cpp  ScriptAsset.hpp  SoundAsset.cpp  SoundAsset.hpp  SpriteSheetAsset.cpp  SpriteSheetAsset.hpp
DWEngine/data/: AssetData.cpp  AssetData.hpp  AssetsData.cpp  AssetsData.hpp  EntitiesData.cpp  EntitiesData.hpp  EntityData.cpp  EntityData.hpp  SpriteSheetAssetData.cpp  SpriteSheetAssetData.hpp
DWEngine/ecs/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  SystemManager.cpp  SystemManager.hpp
DWEngine/ecs/components/: AccelerationComponent.cpp  AccelerationComponent.hpp  AnimationComponent.cpp  AnimationComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  CollidableComponent.cpp  CollidableComponent.hpp  Component.cpp  Component.hpp  FrictionComponent.cpp  FrictionComponent.hpp  GravityComponent.cpp  GravityComponent.hpp  InputComponent.cpp  InputComponent.hpp  IntelligenceComponent.cpp  IntelligenceComponent.hpp  MusicComponent.cpp  MusicComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  RenderableComponent.cpp  SoundComponent.cpp  (+6 more)
DWEngine/gfx/: Renderable.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Texture.cpp  Texture.hpp
DWEngine/time/: Timer.cpp  Timer.hpp
assets/: assets.json  entities.json
config/: config.json
scripts/: enemy.lua  enemy2.lua
(+23 files in other folders)
